2006-12-06 [paul]	2.6.1cvs9

	* src/compose.c
	* src/messageview.c
	* src/procheader.c
	* src/procmime.c
	* src/procmsg.c
	* src/textview.c
		more renaming
		Thanks to Colin

2006-12-06 [colin]	2.6.1cvs8

	* src/ssl_manager.c
	* src/common/ssl_certificate.c
	* src/common/ssl_certificate.h
		Handle multiple certificates per host/port

2006-12-06 [colin]	2.6.1cvs7

	* src/etpan/imap-thread.c
		Fix certificate checking on IMAP

2006-12-06 [colin]	2.6.1cvs6

	* src/folderview.c
		Fix bug 1072, 'Claws stops fetching newsgroups 
		from server when newsgroup got deleted': continue
		checking other groups

2006-12-05 [wwp]	2.6.1cvs5

	* src/message_search.c
	* src/summary_search.c
	* src/gtk/combobox.c
	* src/gtk/combobox.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		make up and down arrow keys in modern gtk_combo_box_entry widgets
		behave like w/ old comboboxes (summary and message search only).

2006-12-05 [paul]	2.6.1cvs4

	* src/wizard.c
		encode headers
		Thanks to Colin

2006-12-05 [paul]	2.6.1cvs3

	* tools/README
	* tools/textviewer.pl
		script updated and description added

2006-12-04 [colin]	2.6.1cvs2

	* src/compose.c
		Run pre-send hook only when checking
		everything

2006-12-04 [paul]	2.6.1cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
	* tools/README
		bump up version number following stable release

2006-12-04 [paul]	2.6.0cvs83

	* README
		updates and corrections

2006-12-04 [colin]	2.6.0cvs82

	* src/common/utils.c
		Probably fix bug 1066, 'Incorrect mailbox 
		size displayed'

2006-12-04 [colin]	2.6.0cvs81

	* src/common/utils.c
		Trim tabs from mailcap file too.

2006-12-02 [paul]	2.6.0cvs80

	* src/exphtmldlg.c
		fix broken GUI under certain languages
	* src/expldifdlg.c
		put the Cancel button to the right

2006-12-01 [paul]	2.6.0cvs79

	* tools/Makefile.am
		remove reference to removed file

2006-12-01 [wwp]	2.6.0cvs78

	* src/addressbook.c
	* src/editaddress.c
		remove forgotten debug statements.

2006-12-01 [wwp]	2.6.0cvs77
